--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "flyio": "^0.4.5",
     "mpvue": "^1.0.6",
+    "vue-loader": "^14.2.2",
     "vuex": "^2.3.1",
     "xmlstring2json": "^0.1.9"
   },
@@ -58,6 +59,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-style-loader": "^3.0.1",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
